# BionicSX2

./: .gitmodules  CMakeLists.txt
.github/workflows/: build-ipa.yml
BionicSx2/cmake/: FindGameController.cmake
BionicSx2/ios/platform/: CocoaTools.mm  Filesystem_iOS.cpp  PageFaultHandler.cpp  Threading_iOS.cpp  iOSVMManager.mm
BionicSx2/ios/ui/: ContentView.swift
BionicSx2/metal/: MetalRenderer.h  MetalRenderer.mm  MetalSharedHeader.h
cmake/: FindUIKit.cmake  ios.toolchain.cmake
ios/: ExportOptions.plist  Info.plist  main.mm
ios/platform/: AudioStream_iOS.cpp  CocoaTools.mm  HostSys_iOS.cpp  HostSys_iOS.mm  PCSX2Stubs.mm  PageFaultHandler.cpp
ios/ui/: AppDelegate.mm  BionicSX2App.swift  GameControllerManager.swift  MetalViewController.swift
metal/: FrameSync.mm  MRCHelpers.h  MetalDeviceInfo.mm  MetalRenderer.h  MetalRenderer.mm  MetalTexture.mm  Shaders.metal
src/: Vif_Dynarec.h
src/GS/: GS.cpp  GS.h  GSExtra.h
src/GS/Renderers/Common/: GSRenderer.cpp
src/Input/: SDLInputSource.h
src/stubs/: FullscreenUI.cpp  GSDumpReplayer.cpp  GSTextureReplacements.cpp  Globals.cpp  ImGuiFullscreen.cpp  ImGuiManager.cpp  ImageStub.cpp  InputRecording.cpp  SaveStateSelectorUI.cpp  backtrace.h  discord_rpc.h  jpeglib.h  png.h  ryml.hpp  ryml_std.hpp  svnrev.h
src/stubs/Zycore/: Types.h
src/stubs/Zydis/: Zydis.h
src/stubs/curl/: curl.h
src/stubs/libzip/: config.h  zipconf.h
src/stubs/plutosvg/: plutosvg.h
src/stubs/plutovg/: plutovg.h
src/stubs/shaderc/: shaderc.hpp
src/stubs/webp/: decode.h  encode.h
src/stubs/xbyak/: xbyak.h  xbyak_util.h
src/x86/: iCOP0.h  iVUzerorec.h
